# hacknation

./: .dockerignore  .env.example  .flake8  .gitignore  CHAIN_OF_THOUGHT.md  CHANGELOG.md  CONFIG.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  ON_DEMAND_ACTIONS.md  QUICKSTART.md  README.md  SCENARIO.md  SCRAPER_GUIDE.md  WIELOCZYNNIKOWA_ANALIZA.md  alembic.ini  create_embeddings.py  docker-compose.override.yml  docker-compose.yml  main.py  main_pipeline.py  pyproject.toml  requirements.txt  setup_database.sql  test.py  test2.py  trigger_workflow.sh
.github/workflows/: update-all-countries.yml  update-germany-data.yml
agent_service/: cloudbuild.yaml  main.py
agent_service/agent/: agent.py
data/extracted/: Chiny na drodze do „zielonego” bezpieczeństwa (1).txt  Four Scenarios for Geopolitical Order in 2025-2030 What Will Great Power Competition Look Like (1).txt  Prace-OSW_Krzemowa-tarcza_net_2.txt  Przykład_analizy_niskiej_jakości_1.txt  Przykład_analizy_niskiej_jakości_2.txt  Raport-OSW_Os-Pekin-Moskwa_net_1.txt  Rosyjskie scenariusze Moskwa wobec inauguracji prezydenta Zełenskiego.txt  Scenarios That Could Define 2035.txt  Scenariusze rozwoju kryzysu w Iraku 2014.txt  Uporządkować rzeczywistość-poradnik analityczny-OSW.txt
data/summaries/: Four Scenarios for Geopolitical Order in 2025-2030 What Will Great Power Competition Look Like (1)_summary.txt  Scenarios That Could Define 2035_summary.txt
frontend/: Dockerfile
frontend/.next/dev/: _events_18.json  prerender-manifest.json  trace
frontend/src/components/: Chat.tsx
internet_searcher/agent/: agent.py
resources/: atlantis.json  china.json  france.json  germany.json  india.json  russia.json  saudi arabia.json  united kingdom.json  united states.json
src/: check_database.py  configuration.py  db_config.py  embeddings.py  helpers.py  pdf_processor.py  report_generator.py  search.py  summarizer.py
src/agents/: country_agent.py  forecasting_agent.py  gemini.py  main.py  prompt.md  requirements.txt
src/agents/agent/: agent.py
src/agents/instructions/: instructions.json  instructions.md
src/agents/tools/: embedding_search.py  world_tool.py
src/api/: __init__.py  app.py
src/api/v1/: routes.py
src/crawlers/: README.md  SCRAPER_UPDATE_LOGIC.md  country_scraper_template.py  germany_advanced_scraper.py  germany_scraper.py
src/db/: Dockerfile  alembic.ini  check_database.py  db_config.py  search.py  test.py
src/db/hack/: __init__.py  base.py  country_data.py  embeddings.py  instructions.py
src/models/: input.py  output.py  prompts.py  world_model.py
src/prompts/: internet_searcher.md  root.md
(+39 files in other folders)
