[project]
name = "hacknation"
version = "0.1.0"
description = "Geopolitical forecasting system with Mesa and Gemini AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # AI & Google services
    "google-cloud-aiplatform[adk,agent-engines]>=1.128.0",
    "pydantic-ai>=1.27.0",
    "pydantic-ai-slim[google]>=1.27.0",
    "google-generativeai>=0.8.0",
    
    # Configuration & validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "pydantic-ai-slim[google,logfire]>=1.27.0",
    "python-dotenv>=1.2.1",
    "logfire>=4.15.1",
    "sentence-transformers>=5.1.2",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    "sqlalchemy>=2.0.0",
    "psycopg2>=2.9.11",
    "pypdf>=4.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    # "sentence-transformers>=2.2.0",
    # "psycopg2-binary>=2.9.0",
    # "pgvector>=0.2.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    
    # Simulation framework
    "mesa>=3.0.0",
    
    # Web scraping
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    
    # PDF generation
    "reportlab>=4.0.0",
]
